reflection for vector
27/12/2023

out_of_range_exception added, update constexpr correctness
28/12/2023

added fequals, fgreater_than, fless_than to math (all constexpr) 
added epsilon to math
28/12/2023

added camera class
28/12/2023

added epsilon equals to all overloads of equals/less_than/greater_than
28/12/2023

added fabs, fsign, fmod, fcos, fsin, ftan, fexp, factorial to math 
30/12/2023

added compile time and runtime implementation to math, runtime uses std and compile time uses constexpr
30/12/2023