@@ -12,8 +12,9 @@ namespace bardcore
     {
         /**
          * \brief camera class, used for creating rays through a screen
+         * \note this class is final, you can't inherit from it
          */
-        class camera
+        class camera final
         {
         protected:
             point3d position_; // position of the camera
@@ -22,7 +23,9 @@ namespace bardcore
             point3d top_left_;
             vector3d half_horizontal_, half_vertical_; // half of the horizontal and vertical vector
 
-            unsigned int screen_width_{}, screen_height_{}; // screen width and height
+            unsigned int screen_width_, screen_height_; // screen width and height
+
+            unsigned int fov_ = 90; // field of view
 
         private:
             /**
@@ -33,17 +36,19 @@ namespace bardcore
             {
                 vector3d arbitrary_vector = {1, 0, 0}; //random vector
                 if (direction_ == arbitrary_vector)
+                    //other random vector, if direction is the same as the first random vector
                     arbitrary_vector = {0, 1, 0};
-                //other random vector, if direction is the same as the first random vector
 
                 const vector3d cross_factor = direction_.cross(arbitrary_vector).normalize();
 
                 //get center of screen
                 const auto center = position_ + direction_;
 
+                const float half_fov_tan = math::ftan(math::degrees_to_radians(static_cast<float>(fov_) / 2));
+
                 //get horizontal and vertical vector
-                half_horizontal_ = direction_.cross(cross_factor).normalize();
-                half_vertical_ = half_horizontal_.cross(direction_).normalize();
+                half_horizontal_ = direction_.cross(cross_factor).normalize() * half_fov_tan;
+                half_vertical_ = half_horizontal_.cross(direction_).normalize() * half_fov_tan;
 
                 //get top left corner
                 top_left_ = center - half_horizontal_ + half_vertical_;
@@ -54,18 +59,27 @@ namespace bardcore
              * \brief constructor for camera (position, direction, width, height)
              * \throws zero_exception if width or height is zero
              * \throws zero_exception if length of direction is zero, e.g if direction is {0, 0, 0}
+             * \throws out_of_range_exception if fov is greater than 180
              * \param position position of the camera
              * \param direction direction of the camera (it will be normalized for you)
              * \param screen_width width of the camera
              * \param screen_height height of the camera
+             * \param fov field of view, the higher the fov, the more the camera will see, default is 90
              */
             constexpr camera(const point3d& position, const vector3d& direction, const unsigned int screen_width,
-                             const unsigned int screen_height) : position_(position), direction_(direction.normalize()),
-                                                                 screen_width_(screen_width),
-                                                                 screen_height_(screen_height)
+                             const unsigned int screen_height, const unsigned int fov = 90) : position_(position),
+                direction_(direction.normalize())
             {
-                set_width(screen_width);
-                set_height(screen_height);
+                if (screen_width == 0 || screen_height == 0)
+                    throw exception::zero_exception("width and height must be greater than 0");
+                if (fov == 0)
+                    throw exception::zero_exception("fov must be greater than 0");
+                if (fov >= 180)
+                    throw exception::out_of_range_exception("fov must be smaller than 180");
+
+                screen_width_ = screen_width;
+                screen_height_ = screen_height;
+                fov_ = fov;
                 calculate_screen();
             }
 
@@ -78,7 +92,7 @@ namespace bardcore
                                                     half_horizontal_(other.half_horizontal_),
                                                     half_vertical_(other.half_vertical_),
                                                     screen_width_(other.screen_width_),
-                                                    screen_height_(other.screen_height_)
+                                                    screen_height_(other.screen_height_), fov_(other.fov_)
             {
             }
 
@@ -92,7 +106,8 @@ namespace bardcore
                                                         half_horizontal_(std::move(other.half_horizontal_)),
                                                         half_vertical_(std::move(other.half_vertical_)),
                                                         screen_width_(std::move(other.screen_width_)),
-                                                        screen_height_(std::move(other.screen_height_))
+                                                        screen_height_(std::move(other.screen_height_)),
+                                                        fov_(std::move(other.fov_))
             {
             }
 
@@ -132,6 +147,7 @@ namespace bardcore
             NODISCARD constexpr unsigned int get_screen_height() const noexcept { return screen_height_; }
             NODISCARD constexpr const point3d& get_position() const noexcept { return position_; }
             NODISCARD constexpr const vector3d& get_direction() const noexcept { return direction_; }
+            NODISCARD constexpr unsigned int get_fov() const noexcept { return fov_; }
 
             /**
              * \brief sets the position of the camera
@@ -182,6 +198,24 @@ namespace bardcore
                 calculate_screen();
             }
 
+            /**
+             * \brief sets the fov of the camera
+             * \throws zero_exception if fov is zero
+             * \throws out_of_range_exception if fov is greater than 180
+             * \param fov new fov
+             */
+            constexpr void set_fov(const unsigned int fov)
+            {
+                if (fov == 0)
+                    throw exception::zero_exception("fov must be greater than 0");
+
+                if (fov >= 180)
+                    throw exception::out_of_range_exception("fov must be smaller than 180");
+
+                fov_ = fov;
+                calculate_screen();
+            }
+
             ///////////////////////////////////////////////////////
             ///                    operators                    ///
             ///////////////////////////////////////////////////////
@@ -189,44 +223,44 @@ namespace bardcore
             // operators like (+,-,*,/,<,>, etc) are not implemented because they don't make sense for a camera
 
             /**
-             * \brief output operator, prints "{position: (x, y, z), direction: (x, y, z), screen_width: w, screen_height: h}"
+             * \brief output operator, prints "{position: (x, y, z), direction: (x, y, z), screen_width: w, screen_height: h, fov: f}"
              * \param os output stream
              * \param camera camera to output
-             * \return output stream "{position: (x, y, z), direction: (x, y, z), screen_width: w, screen_height: h}"
+             * \return output stream "{position: (x, y, z), direction: (x, y, z), screen_width: w, screen_height: h, fov: f}"
              */
             friend std::ostream& operator<<(std::ostream& os, const camera& camera)
             {
                 return os << "{position: " << camera.position_ << ", direction: " << camera.direction_ <<
                     ", screen_width: "
-                    << camera.screen_width_ << ", screen_height: " << camera.screen_height_ << "}";
+                    << camera.screen_width_ << ", screen_height: " << camera.screen_height_ << ", fov: " << camera.fov_
+                    << "}";
             }
 
             /**
              * \brief copy assignment operator
-             * \param other camera to copy
              * \return this
              */
             camera& operator=(const camera&) = default;
 
             /**
              * \brief move assignment operator
-             * \param other camera to move
              * \return this
              */
             camera& operator=(camera&&) noexcept = default;
 
             /**
-             * \brief equal operator (position, direction, screen width and height are equal)
+             * \brief equal operator (position, direction, screen width, height and fov are equal)
              * \param left left camera
              * \param right right camera
-             * \return true if left == right (position, direction, screen width and height are equal)
+             * \return true if left == right (position, direction, screen width, height and fov are equal)
              */
             NODISCARD constexpr friend bool operator==(const camera& left, const camera& right) noexcept
             {
                 return left.position_ == right.position_
                     && left.direction_ == right.direction_
                     && left.screen_width_ == right.screen_width_
-                    && left.screen_height_ == right.screen_height_;
+                    && left.screen_height_ == right.screen_height_
+                    && left.fov_ == right.fov_;
             }
 
             /**
