@@ -16,6 +16,16 @@ namespace testing
         EXPECT_EQ(cam.get_direction(), direction);
         EXPECT_EQ(cam.get_screen_width(), screen_width);
         EXPECT_EQ(cam.get_screen_height(), screen_height);
+        EXPECT_EQ(cam.get_fov(), 90);
+    }
+
+    TEST(camera_test, constructor_exceptions)
+    {
+        EXPECT_THROW(utility::camera({0, 0, 0}, {1,1,1}, 1, 0), exception::zero_exception);
+        EXPECT_THROW(utility::camera({0, 0, 0}, {1,1,1}, 0, 1), exception::zero_exception);
+        EXPECT_THROW(utility::camera({0, 0, 0}, {0,0,0}, 1, 1), exception::zero_exception);
+        EXPECT_THROW(utility::camera({0, 0, 0}, {1,1,1}, 1, 1, 0), exception::zero_exception);
+        EXPECT_THROW(utility::camera({0, 0, 0}, {1,1,1}, 1, 1, 180), exception::out_of_range_exception);
     }
 
     TEST(camera_test, setters)
@@ -24,8 +34,9 @@ namespace testing
         constexpr vector3d direction{1, 0, 0};
         constexpr unsigned int screen_width = 100;
         constexpr unsigned int screen_height = 100;
+        constexpr unsigned int fov = 90;
 
-        utility::camera cam{position, direction, screen_width, screen_height};
+        utility::camera cam{position, direction, screen_width, screen_height, fov};
 
         constexpr point3d new_position{1, 1, 1};
         cam.set_position(new_position);
@@ -39,10 +50,14 @@ namespace testing
         constexpr unsigned int new_screen_height = 200;
         cam.set_height(new_screen_height);
 
+        constexpr unsigned int new_fov = 45;
+        cam.set_fov(new_fov);
+
         EXPECT_EQ(cam.get_position(), new_position);
         EXPECT_EQ(cam.get_direction(), new_direction);
         EXPECT_EQ(cam.get_screen_width(), new_screen_width);
         EXPECT_EQ(cam.get_screen_height(), new_screen_height);
+        EXPECT_EQ(cam.get_fov(), new_fov);
     }
 
     TEST(camera_test, setters_exceptions)
@@ -66,19 +81,20 @@ namespace testing
 
     TEST(camera_test, shoot_ray)
     {
-        constexpr point3d position{0, 0, 0};
-        constexpr vector3d direction{1, 0, 0};
+        constexpr point3d position{-1, 2, 0};
+        constexpr vector3d direction{9, 65, 24};
         constexpr unsigned int screen_width = 100;
         constexpr unsigned int screen_height = 100;
         constexpr float distance = 7;
+        constexpr float fov = 120;
 
-        constexpr utility::camera cam = utility::camera(position, direction, screen_width, screen_height);
+        constexpr utility::camera cam = utility::camera(position, direction, screen_width, screen_height, fov);
 
         constexpr utility::ray ray = cam.shoot_ray(screen_width / 2, screen_height / 2, distance);
 
-        constexpr utility::ray ray2_expected = utility::ray(
-            position, vector3d(0.76534f, -0.27552f, 0.5816f), 73);
-        constexpr utility::ray ray2 = cam.shoot_ray(68, 12, 73);
+        constexpr utility::ray ray2_expected = utility::ray(position, vector3d(-0.261875f, 0.663055f, 0.70127f), 73);
+        constexpr utility::ray ray2 = cam.shoot_ray(63, 65, 73);
+
 
         EXPECT_EQ(ray, utility::ray(position, direction, distance));
         EXPECT_EQ(ray2, ray2_expected);
@@ -91,8 +107,9 @@ namespace testing
         constexpr unsigned int screen_width = 20;
         constexpr unsigned int screen_height = 80;
         constexpr float distance = 50;
+        constexpr float fov = 90;
 
-        constexpr utility::camera cam = utility::camera(position, direction, screen_width, screen_height);
+        constexpr utility::camera cam = utility::camera(position, direction, screen_width, screen_height, fov);
 
         constexpr auto ray_expected = utility::ray(position, vector3d(0.746306f, 0.38265f, 0.544615f), 50);
         constexpr utility::ray ray = cam.shoot_ray(2, 63, distance);
